# spreadsheet_with_django

./: LICENSE  README.md  pyproject.toml  setup.py
src/spreadsheet_with_django/: my_functions.py
src/spreadsheet_with_django/books/: models.py
src/spreadsheet_with_django/spdjango/: asgi.py  settings.py  urls.py  wsgi.py
tests/: parse_excel_test.py  say_hello_test.py
tests/data/: excel_test_data.xlsx
