# cSpell:ignore aidken
# cSpell:ignore setuptools openpyxl xlwings

[project]
name = "spreadsheet_with_django"
authors = [
    {name="Ken Aida"}
]
version = "2025.02.23a1"
description = "A Django app with spreadsheet functionality"

requires-python = ">= 3.10"

dependencies = [
    "openpyxl>=3.1.0",
    "xlwings>=0.31.5",
]

readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
